POR/RefEdge/src/objects/Invitation__c.object
<CustomObject>
    <description>Content Sharing (Bound 4)</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Invitations</relationshipLabel>
        <relationshipName>Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invitation_Expiration__c</fullName>
        <inlineHelpText>The date upon which the Microsite associated with this invitation will no longer be accessible.</inlineHelpText>
        <label>Invitation Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invitation_Recipient_Type__c</fullName>
        <description>This field represent recipient of invitation eg. Contact or Co-Worker or Both.</description>
        <label>Invitation_Recipient_Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Invitation_Expired__c</fullName>
        <formula>OR( Is_Expired__c,  Invitation_Expiration__c &lt;  TODAY())</formula>
        <label>Is Invitation Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lead associated to this invitation</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Invitations</relationshipLabel>
        <relationshipName>Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Microsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Microsite</label>
        <referenceTo>Microsite__c</referenceTo>
        <relationshipLabel>Invitations</relationshipLabel>
        <relationshipName>Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>This is a place to add notes about this invitation for yourself. They are not included in the invitation or Microsite.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invitations</relationshipLabel>
        <relationshipName>Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invitation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Microsite__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Invitation_Expiration__c</columns>
        <columns>Is_Invitation_Expired__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Invitations</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Microsite__c</columns>
        <columns>Invitation_Expiration__c</columns>
        <columns>Is_Expired__c</columns>
        <columns>Notes__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Mine</filterScope>
        <label>My Invitations</label>
    </listViews>
    <nameField>
        <label>Invitation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>